force-app/main/default/objects/Quiz_Item__c/Quiz_Item__c.object-meta.xml
<CustomObject>
    <label>Quiz Item</label>
    <nameField>
        <displayFormat>QIN-{0}</displayFormat>
        <label>Quiz Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>