force-app/main/default/objects/Quiz_Item__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Related Quiz</relationshipLabel>
    <relationshipName>Quiz_Items</relationshipName>
    <type>Lookup</type>
</CustomField>