force-app/main/default/objects/Quiz_Item__c/fields/Question_Title__c.field-meta.xml
<CustomField>
    <fullName>Question_Title__c</fullName>
    <formula>Question__r.Question_Description__c</formula>
    <label>Question Title</label>
    <type>Text</type>
</CustomField>