force-app/main/default/objects/Quiz_Item__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Related Questions</relationshipLabel>
    <relationshipName>Quiz_Items</relationshipName>
    <type>Lookup</type>
</CustomField>