force-app/main/default/objects/Quiz_Item__c/fields/Quiz_Title__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Title__c</fullName>
    <formula>Quiz__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quiz Title</label>
    <type>Text</type>
</CustomField>