force-app/main/default/objects/Quiz_Item__c/fields/Weights__c.field-meta.xml
<CustomField>
    <fullName>Weights__c</fullName>
    <label>Weights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>