force-app/main/default/objects/Quiz_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Quiz__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>